<resources>
    <string name="app_name">MomoMotus</string>
    <string name="maintitle">Bienvenue sur</string>
    <string name="mainsubtitle">Choisissez le nombre de lettres par mot et lancez la partie. 5 mots sont à trouver par partie.</string>
    <string name="mainerror">Vous devez cocher une des options ci-dessous</string>
    <string name="six_letters">Mots de 6 lettres</string>
    <string name="seven_letters">Mots de 7 lettres</string>
    <string name="eight_letters">Mots de 8 lettres</string>
    <string name="nine_letters">Mots de 9 lettres</string>
    <string name="ten_letters">Mots de 10 lettres</string>
    <string name="new_six">Nouvelle partie à 6 lettres</string>
    <string name="new_seven">Nouvelle partie à 7 lettres</string>
    <string name="new_eight">Nouvelle partie à 8 lettres</string>
    <string name="new_nine">Nouvelle partie à 9 lettres</string>
    <string name="new_ten">Nouvelle partie à 10 lettres</string>
    <string name="button_send">Démarrer une partie</string>
    <string name="loading">Veuillez patienter svp...</string>
    <string name="button_reload">Retour vers l\'accueil</string>
    <string name="button_exit">Quitter</string>
    <string name="endtitle">Partie terminée !</string>
    <string name="title_activity_motus">MomoMotus</string>
    <string name="mot">Tapez votre mot</string>
    <string name="counter" translatable="false">%1$d/%2$d</string>
    <string name="blank" translatable="false">\u00A0</string>
    <string name="fallait_trouver">Il fallait trouver le mot : %1$s</string>
    <string name="existe_pas">Le mot " %1$s " n\'existe pas.</string>
    <string name="trouve">Bravo ! Vous avez trouvé le mot : " %1$s " !</string>
    <string name="premier_coup">Incroyable ! Vous avez trouvé " %1$s " du premier coup !</string>
    <string name="x_coup">" %1$s " trouvé en %2$d coups</string>
    <string name="nontrouve">" %1$s " non trouvé</string>
    <string name="interstitial" translatable="false">ca-app-pub-2669557761715669/7770214839</string>
    <string name="banner_bottom" translatable="false">ca-app-pub-2669557761715669/4459614036</string>
    <string name="ok" translatable="false">ok</string>
    <string name="close">Fermer</string>
    <string name="need_help">Besoin d\'aide ?</string>
    <string name="red_explanation">est une lettre bien placée.</string>
    <string name="yellow_explanation">est une lettre mal placée.</string>
    <string name="blue_explanation">est une lettre qui n\'est pas dans le mot.</string>
    <string name="A" translatable="false">A</string>
    <string name="social_networks">Réseaux sociaux</string>
    <string name="fb_share">Partager sur Facebook</string>
    <string name="fb_share_title">J\'ai joué à Momomotus !</string>
    <string name="fb_ContentDesc">Aujourd\'hui j\'ai joué à Momomotus !</string>
    <string name="fb_ContentDesc2">J\'ai trouvé les mots :&#160;</string>
    <string name="facebook_app_id" translatable="false">914409908597657</string>
    <string name="store_url" translatable="false">https://play.google.com/store/apps/details?id=com.paocorp.momomotus</string>
    <string name="app_icon_url">http://paocorp.com/res/images/ico/ic_launcher_fr.png</string>
    <string name="credits">Application développée par : paocorp.com</string>
    <string name="open">Ouvrir</string>
    <string name="new_game">Nouvelle partie</string>
    <string name="rate_app">Noter cette application</string>
    <string name="app_url" translatable="false">https://play.google.com/store/apps/details?id=com.paocorp.momomotus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="getDef">http://www.larousse.fr/dictionnaires/francais/%1$s</string>
    <string name="diffEasy">Normale</string>
    <string name="diffHard">Difficile</string>

    <string name="billingKey" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAz2qLEciU7Bd9ZJxAsKgr91Ud42A2D7Z0h9idy0FuI+OpB+Yu1+nOnyW9VyU/kDpGiFt/N3MhywrGpGaTGz3NtuAdOSURzFe7y8nEaWKsRlSFzfDmuGJgZZzMtqw4JnrrHz53vAKAuE7hcP5pABad0qpUouPPYQnF570I7BhE5TTVX999HCwOJIG7x4WwJ7di56jP40wX18xD8rCf7HhKlKZX1Z+11eDR4H0f2kafSwIbOJ7G2W39w3NT1vOEQtRYdgXfBBsKw4JSZGYCNNEEBFXzaCwn0vp0PairuaD8qyAixtH/O9upY8KIOcbcQkelbe6P+ZOmHyKBci/AojMzhQIDAQAB</string>
    <string name="purchase">Achat</string>
    <string name="endAds">Marre des publicités ?</string>
    <string name="purchaseNoAds">Faire un paiement unique de %1$s</string>
    <string name="noMoreAds">Ne plus avoir de publicités définitivement</string>
    <string name="purchaseNotDone">Achat non effectué</string>
    <string name="purchaseError">Erreur durant le paiement</string>
    <string name="purchaseThx">Merci pour votre achat</string>
</resources>
