<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal">


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/optGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainsubtitle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <RadioButton
            android:id="@+id/radio_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="@dimen/radio_width"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="@dimen/radio_vertical_margin"
            android:paddingTop="@dimen/radio_vertical_margin"
            android:text="@string/six_letters"
            android:textColor="@color/black"
            android:buttonTint="@color/black"
            android:textSize="@dimen/optGame" />

        <RadioButton
            android:id="@+id/radio_seven"
            android:layout_width="@dimen/radio_width"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="@dimen/radio_vertical_margin"
            android:paddingTop="@dimen/radio_vertical_margin"
            android:text="@string/seven_letters"
            android:buttonTint="@color/black"
            android:textColor="@color/black"
            android:textSize="@dimen/optGame" />

        <RadioButton
            android:id="@+id/radio_eight"
            android:layout_width="@dimen/radio_width"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="@dimen/radio_vertical_margin"
            android:paddingTop="@dimen/radio_vertical_margin"
            android:text="@string/eight_letters"
            android:buttonTint="@color/black"
            android:textColor="@color/black"
            android:textSize="@dimen/optGame" />

        <RadioButton
            android:id="@+id/radio_nine"
            android:layout_width="@dimen/radio_width"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="@dimen/radio_vertical_margin"
            android:paddingTop="@dimen/radio_vertical_margin"
            android:text="@string/nine_letters"
            android:buttonTint="@color/black"
            android:textColor="@color/black"
            android:textSize="@dimen/optGame" />

        <RadioButton
            android:id="@+id/radio_ten"
            android:layout_width="@dimen/radio_width"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="@dimen/radio_vertical_margin"
            android:paddingTop="@dimen/radio_vertical_margin"
            android:text="@string/ten_letters"
            android:buttonTint="@color/black"
            android:textColor="@color/black"
            android:textSize="@dimen/optGame" />
    </RadioGroup>

    <Button
        android:id="@+id/btnsend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/optGame"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_red"
        android:drawablePadding="10sp"
        android:drawableRight="@drawable/ic_send_white_24dp"
        android:onClick="startGame"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="@dimen/btnsend" />

</RelativeLayout>