<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/endtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/endtitle"
            android:textColor="@color/black"
            android:textSize="@dimen/maintitle" />

        <TextView
            android:id="@+id/mot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/endtitle"
            android:paddingBottom="@dimen/ending_padding"
            android:paddingTop="@dimen/ending_padding"
            android:text="@string/blank"
            android:textSize="@dimen/mainsubtitle" />

        <TextView
            android:id="@+id/mot2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mot1"
            android:paddingBottom="@dimen/ending_padding"
            android:paddingTop="@dimen/ending_padding"
            android:text="@string/blank"
            android:textSize="@dimen/mainsubtitle" />

        <TextView
            android:id="@+id/mot3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mot2"
            android:paddingBottom="@dimen/ending_padding"
            android:paddingTop="@dimen/ending_padding"
            android:text="@string/blank"
            android:textSize="@dimen/mainsubtitle" />

        <TextView
            android:id="@+id/mot4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mot3"
            android:paddingBottom="@dimen/ending_padding"
            android:paddingTop="@dimen/ending_padding"
            android:text="@string/blank"
            android:textSize="@dimen/mainsubtitle" />

        <TextView
            android:id="@+id/mot5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mot4"
            android:paddingBottom="@dimen/ending_padding"
            android:paddingTop="@dimen/ending_padding"
            android:text="@string/blank"
            android:textSize="@dimen/mainsubtitle" />

        <Button
            android:id="@+id/backhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mot5"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_red"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_refresh_white_24dp"
            android:onClick="backHome"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:text="@string/button_reload"
            android:textColor="@color/white"
            android:textSize="@dimen/btnsend" />

        <Button
            android:id="@+id/fbshare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/backhome"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_fb"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/com_facebook_button_icon"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:onClick="shareFB"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:text="@string/fb_share"
            android:textColor="@color/white"
            android:textSize="@dimen/btnsend" />

        <RelativeLayout
            android:id="@+id/rel_banner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fbshare"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <com.google.android.gms.ads.AdView
                android:id="@+id/banner_bottom"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10sp" />
        </RelativeLayout>


    </RelativeLayout>
</ScrollView>