<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="64sp"
            android:background="@color/teal_darken2"
            android:gravity="center_horizontal|center_vertical"
            android:scaleType="center"
            android:text="@string/need_help"
            android:textColor="@color/white"
            android:textSize="@dimen/mainsubtitle" />

        <LinearLayout
            android:id="@+id/block_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title">

            <TextView
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/square_red"
                android:padding="10sp"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="@dimen/reduced_text_size" />

            <TextView
                android:id="@+id/red_explained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10sp"
                android:text="@string/red_explanation"
                android:textColor="@color/black"
                android:textSize="@dimen/mainsubtitle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/block_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/block_red">

            <TextView
                android:id="@+id/yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/square_yellow"
                android:padding="10sp"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="@dimen/reduced_text_size" />

            <TextView
                android:id="@+id/yellow_explained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10sp"
                android:text="@string/yellow_explanation"
                android:textColor="@color/black"
                android:textSize="@dimen/mainsubtitle" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/block_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/block_yellow">

            <TextView
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/square_blue"
                android:padding="10sp"
                android:text="A"
                android:textColor="@color/white"
                android:textSize="@dimen/reduced_text_size" />

            <TextView
                android:id="@+id/blue_explained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10sp"
                android:text="@string/blue_explanation"
                android:textColor="@color/black"
                android:textSize="@dimen/mainsubtitle" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>